# odoo_stub

./: pyproject.toml  setup.py
